--- a/Assets/Samples/HelloWorld/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/HelloWorld/Scripts/Views/MainView.xaml
@@ -12,6 +12,20 @@
         <Grid.Resources>
             <ResourceDictionary Source="../Resources/AllResources.xaml" />
         </Grid.Resources>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroup">
+                <VisualStateGroup.Transitions>
+                    <VisualTransition GeneratedDuration="0:0:1"/>
+                </VisualStateGroup.Transitions>
+                <VisualState x:Name="Pressed">
+                    <Storyboard>
+                        <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" Storyboard.TargetName="button">
+                            <EasingColorKeyFrame KeyTime="0" Value="#FFD82D2D"/>
+                        </ColorAnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <Grid.Triggers>
             <EventTrigger RoutedEvent="FrameworkElement.Loaded">
                 <BeginStoryboard Storyboard="{StaticResource Intro}" />
@@ -23,10 +37,12 @@
                       Margin="24">
                     <Grid HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" /> <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition /> <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid x:Name="Logo"
                               Grid.Column="0"
@@ -34,7 +50,10 @@
                               Width="49">
                             <Grid.RenderTransform>
                                 <TransformGroup>
-                                    <ScaleTransform /> <SkewTransform /> <RotateTransform /> <TranslateTransform />
+                                    <ScaleTransform />
+                                    <SkewTransform />
+                                    <RotateTransform />
+                                    <TranslateTransform />
                                 </TransformGroup>
                             </Grid.RenderTransform>
                             <Path x:Name="Line1"
@@ -77,7 +96,9 @@
                                       RenderTransformOrigin="1,0.5">
                                     <Path.RenderTransform>
                                         <TransformGroup>
-                                            <ScaleTransform /> <SkewTransform /> <RotateTransform />
+                                            <ScaleTransform />
+                                            <SkewTransform />
+                                            <RotateTransform />
                                             <TranslateTransform />
                                         </TransformGroup>
                                     </Path.RenderTransform>
@@ -97,7 +118,10 @@
                                        RenderTransformOrigin="0.5,0.5">
                                 <TextBlock.RenderTransform>
                                     <TransformGroup>
-                                        <ScaleTransform /> <SkewTransform /> <RotateTransform /> <TranslateTransform />
+                                        <ScaleTransform />
+                                        <SkewTransform />
+                                        <RotateTransform />
+                                        <TranslateTransform />
                                     </TransformGroup>
                                 </TextBlock.RenderTransform>
                             </TextBlock>
@@ -108,7 +132,10 @@
                                        RenderTransformOrigin="0.5,0.5">
                                 <TextBlock.RenderTransform>
                                     <TransformGroup>
-                                        <ScaleTransform /> <SkewTransform /> <RotateTransform /> <TranslateTransform />
+                                        <ScaleTransform />
+                                        <SkewTransform />
+                                        <RotateTransform />
+                                        <TranslateTransform />
                                     </TransformGroup>
                                 </TextBlock.RenderTransform>
                             </TextBlock>
@@ -117,5 +144,6 @@
                 </Grid>
             </Viewbox>
         </Grid>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="-2,59,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </UserControl>
