--- a/Blend/Conductors/App.xaml
+++ b/Blend/Conductors/App.xaml
@@ -1,12 +1,13 @@
-﻿<Application x:Class="Caliburn.Noesis.Conductor.OneActive.App"
+﻿<Application x:Class="Caliburn.Noesis.Conductors.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:sample="clr-namespace:Caliburn.Noesis.Samples.ConductorOneActive">
+             xmlns:sample="clr-namespace:Caliburn.Noesis.Samples.Conductors">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../Assets/Samples/Conductors/Scripts/Controls/FlipViewResources.xaml" />
                 <ResourceDictionary>
-                    <sample:ConductorOneActiveBootstrapper x:Key="Bootstrapper" />
+                    <sample:ConductorsBootstrapper x:Key="Bootstrapper" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
