--- a/Assets/Caliburn.Noesis/Platform/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Platform/ShellView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl
-    x:Class="Caliburn.Noesis.ShellView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cal="clr-namespace:Caliburn.Noesis"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DataContext="{d:DesignInstance cal:ShellViewModel}"
-    mc:Ignorable="d">
+<Page x:Class="Caliburn.Noesis.ShellView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:cal="clr-namespace:Caliburn.Noesis"
+      xmlns:conv="clr-namespace:Caliburn.Noesis.Converters"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      d:DataContext="{d:DesignInstance cal:ShellViewModel}"
+      mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
-            <cal:NullToCollapsedConverter x:Key="NullToCollapsed" />
+            <conv:NullToCollapsedConverter x:Key="NullToCollapsed" />
         </Grid.Resources>
         <ContentControl Content="{Binding MainContentConductor.ActiveItem, Mode=OneWay}" />
         <ItemsControl Background="{x:Null}" ItemsSource="{Binding WindowConductor.Items, Mode=OneWay}">
